--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </div>
              <!-- heading ends -->
              <div class="row">
+                 <!-- sidebar starts -->
                  <div class="col-md-4">
                      <h3>About Ping Pong</h3>
                      <h4>Created By</h4>
@@ -23,10 +24,32 @@
                      <h3>GitHub Username/Url</h3>
                      <h4>link</h4>
                  </div>
+                 <!-- sidebar ends -->
+                 <!-- body starts -->
 
+                 <div class="col-md-8">
+                     <h3>Let's Play the game</h3>
+                     <h4>Rules :</h4>
+                     <h5>Ping Pong will count up to your number from 1 with the following exceptions.</h5>
+                     <ol>
+                         <li>Numbers divisible by 3 are replaced with "ping"</li>
+                         <li>Numbers divisible by 5 are replaced with "pong"</li>
+                         <li>Numbers divisible by 15 are replaced with "ping-pong"</li>
+                     </ol>
+                     <form id="formone" >
+                         <label for = "pingpong">Enter your Number here :</label>
+                         <input id = "pingpong" type = "number" required>
+                         <button type = "button" class = "btn btn-success">Ping Pong !!!</button>
+                         <button type="reset" class = "btn btn-danger" name="button">Reset</button>
+                     </form>
+                     <!-- body ends -->
+                     <!-- result starts -->
+                     <div id="output">
+                         <output id="result"></output>
+                     </div>
+                     <!-- result ends -->
+                 </div>
              </div>
-
         </div>
-
     </body>
 </html
