it adds readme to the fileand js

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                      <form id="formone" >
                          <label for = "pingpong">Enter your Number here :</label>
                          <input id = "pingpong" type = "number" required>
-                         <button type = "button" class = "btn btn-success">Ping Pong !!!</button>
-                         <button type="reset" class = "btn btn-danger" name="button">Reset</button>
+                         <button type = "submit" class = "btn btn-success">Ping Pong !!!</button>
+                         <button type = "reset" class = "btn btn-danger" name="button">Reset</button>
                      </form>
                      <!-- body ends -->
                      <!-- result starts -->
                      <div id="output">
-                         <output id="result"></output>
+                         <ul id="result"></ul>
                      </div>
                      <!-- result ends -->
                  </div>
