it adds front end logic and backend logic

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                          <label for = "pingpong">Enter your Number here :</label>
                          <input id = "pingpong" type = "number" required>
                          <button type = "submit" class = "btn btn-success">Ping Pong !!!</button>
-                         <button type = "reset" class = "btn btn-danger" name="button">Reset</button>
+                         <button id = "reset" type = "reset" class = "btn btn-danger" name = "button">Reset</button>
                      </form>
                      <!-- body ends -->
                      <!-- result starts -->
