it adds style to the sidebar columns and the whole body of html,adds image to the background

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
              <!-- heading ends -->
              <div class="row">
                  <!-- sidebar starts -->
-                 <div class="col-md-4">
+                 <div class="col-md-3">
                      <h3>About Ping Pong</h3>
                      <h4>Created By</h4>
                      <h5>Saneyee Sarkar</h5>
-                     <h3>GitHub Username/Url</h3>
-                     <h4>link</h4>
+                     <h4>GitHub Url</h4>
+                     <h5><a href="https://github.com/saneyee/PING-PONG" target="_blank">Github</a></h5>
                  </div>
                  <!-- sidebar ends -->
                  <!-- body starts -->
 
-                 <div class="col-md-8">
+                 <div class="col-md-9">
                      <h3>Let's Play the game</h3>
                      <h4>Rules :</h4>
                      <h5>Ping Pong will count up to your number from 1 with the following exceptions.</h5>
